2006-01-15  Bastien Nocera  <hadess@hadess.net>

	* libgnomeui/gnome-thumbnail.c: (read_scripts): transform the second
	'@' in the GConf tree into a '+', to allow thumbnailing files with
	a '+' in their mime-type (Closes: #326638)

2006-01-13  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "zh_HK" to ALL_LINGUAS.

2006-01-09  Kjartan Maraas  <kmaraas@gnome.org>

	* NEWS: Update some.
	* configure.in: Bump reqs for libgnome and libbonoboui.
	* libgnomeui/gnome-client.c: 
	(gnome_client_module_get_goption_group),
	(gnome_client_module_info_get):
	* libgnomeui/gnome-ui-init.c: (libgnomeui_get_goption_group),
	(libgnomeui_module_info_get): Fix leaks introduced by the move
	to GOption. (Christian Perch). Closes bug #326237.

2006-01-01  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomeui/gnome-app-helper.c: (showing_pixmaps_changed_notify),
	(menus_have_tearoff_changed_notify),
	(per_app_toolbar_style_changed_notify),
	(toolbar_style_changed_notify):
	* libgnomeui/gnome-app.c: (dock_item_changed_notify):
	* libgnomeui/gnome-client.c: (client_save_yourself_callback),
	(client_die_callback), (client_save_complete_callback),
	(client_shutdown_cancelled_callback):
	* libgnomeui/gnome-entry.c: (gnome_entry_history_changed):
	* libgnomeui/gnome-gconf-ui.c: (error_idle_func):
	* libgnomeui/gnome-icon-lookup.c: (make_compat_mime_name):
	* libgnomeui/gnome-icon-sel.c: (load_idle_func):
	* libgnomeui/gnome-pixmap-entry.c: (changed_timeout_func):
	* libgnomeui/gnome-thumbnail-pixbuf-utils.c: (vfs_src):
	* libgnomeui/gnome-ui-init.c: (event_sounds_changed_cb):
	Apply a patch to improve thread safety issues all over the place
	Patch from <jylefort at FreeBSD org>. Closes bug #152023 partially.

2006-01-01  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomeui/gnome-icon-lookup.c: (make_compat_mime_name):
	Remove unused variable.
	* libgnomeui/gnome-thumbnail-pixbuf-utils.c: (vfs_src):
	Add cast to avoid compiler warning.