@@ -333,14 +333,17 @@ gnome_icon_lookup (GtkIconTheme               *icon_theme,
 
   if (thumbnail_factory)
     {
-      is_svg = (strcmp (mime_type, "image/svg") == 0 ||
-		strcmp (mime_type, "image/svg+xml") == 0);
-      if (flags & GNOME_ICON_LOOKUP_FLAGS_SHOW_SMALL_IMAGES_AS_THEMSELVES &&
-	  ((!is_svg && mimetype_supported_by_gdk_pixbuf (mime_type)) ||
-	   ( is_svg && flags & GNOME_ICON_LOOKUP_FLAGS_ALLOW_SVG_AS_THEMSELVES))  &&
-	  strncmp (file_uri, "file:/", 6) == 0 &&
-	  file_info && file_info->size < SELF_THUMBNAIL_SIZE_THRESHOLD)
-	return gnome_vfs_get_local_path_from_uri (file_uri);
+      if(mime_type)
+      {
+	    is_svg = (strcmp (mime_type, "image/svg") == 0 ||
+			strcmp (mime_type, "image/svg+xml") == 0);
+      	    if (flags & GNOME_ICON_LOOKUP_FLAGS_SHOW_SMALL_IMAGES_AS_THEMSELVES 
+		&& ((!is_svg && mimetype_supported_by_gdk_pixbuf (mime_type)) ||
+	   	( is_svg && flags & GNOME_ICON_LOOKUP_FLAGS_ALLOW_SVG_AS_THEMSELVES))  &&
+	  	strncmp (file_uri, "file:/", 6) == 0 &&
+	  	file_info && file_info->size < SELF_THUMBNAIL_SIZE_THRESHOLD)
+		return gnome_vfs_get_local_path_from_uri (file_uri);
+      }
       
       mtime = 0;
       if (file_info)
