@@ -1,3 +1,9 @@
+2006-01-15  Kjartan Maraas <kmaraas@gnome.org>
+
+	* libgnomeui/gnome-icon-lookup.c: (gnome_icon_lookup): Prevent
+	a crash if mime_type is NULL. Patch from Felix Riemann.
+	Closes bug #319549.
+
 2006-01-15  Bastien Nocera  <hadess@hadess.net>
 
 	* libgnomeui/gnome-thumbnail.c: (read_scripts): transform the second
